[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/HTTP.gd" type="Script" id=1]
[ext_resource path="res://Data/Themes/Main Theme.res" type="Theme" id=2]

[node name="HTTP" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Button" type="Button" parent="."]
margin_left = 237.0
margin_top = 120.0
margin_right = 605.0
margin_bottom = 184.0
text = "Oh she fill my mind up with ideas"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
